fix: downgrade rack gem

--- a/pkgs/Gemfile
+++ b/pkgs/Gemfile
@@ -8,7 +8,7 @@ gem 'ffi'
 gem 'json'
 gem 'ruby2_keywords'
 gem 'mustermann'
-gem 'rack'
+gem 'rack', '~> 2.2'
 gem 'rack-protection'
 gem 'rack-test'
 gem 'sinatra'
