docs: add dark mode and toggle to mkdocs

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -4,3 +4,17 @@ repo_url: https://github.com/matt1432/nixos-pcsd
 
 theme:
   name: material
+  palette:
+    # Palette toggle for light mode
+    - scheme: default
+      toggle:
+        icon: material/brightness-7 
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      primary: deep purple
+      accent: blue
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
