docs(mkdocs): uncheck cookies by default

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -26,3 +26,13 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
+
+extra:
+  consent:
+    cookies:
+      analytics:
+        name: Google Analytics
+        checked: false
+      github:
+        name: GitHub
+        checked: false
