--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -8,6 +8,10 @@ theme:
   font:
     text: Noto Sans
 
+  features:
+    - content.code.copy
+    - content.code.select
+
   palette:
     # Palette toggle for automatic mode
     - media: "(prefers-color-scheme)"
@@ -30,6 +34,15 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
 
 extra:
   consent:
