--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -21,4 +21,4 @@ jobs:
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
     - name: Build package
-      run: nix build --print-build-logs
+      run: nix build --print-build-logs --accept-flake-config
