--- a/pkgs/pcs/Gemfile
+++ b/pkgs/pcs/Gemfile
@@ -8,13 +8,10 @@ gem 'ffi'
 gem 'json'
 gem 'ruby2_keywords'
 gem 'mustermann'
-gem 'rack'
-gem 'rackup'
+gem 'rack', '~> 2.2'
 gem 'rack-protection'
-gem 'base64'
 gem 'rack-test'
 gem 'sinatra'
-gem 'rack-session'
 gem 'tilt'
 gem 'nio4r'
 gem 'puma'
