--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -2,25 +2,30 @@ name: Binary Cache
 
 on: [push, pull_request, workflow_dispatch]
 jobs:
-  nix:
-    name: "Build"
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        submodules: recursive
+    nix:
+        name: 'Build'
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+              with:
+                  submodules: recursive
 
-    - uses: cachix/install-nix-action@v30
-    - uses: DeterminateSystems/flakehub-cache-action@main
-    - uses: cachix/cachix-action@v15
-      with:
-        name: pcsd
-        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+            - uses: cachix/install-nix-action@v31
+              with:
+                  github_access_token: ${{ secrets.GITHUB_TOKEN }}
+                  extra_nix_config: |
+                      accept-flake-config = true
 
-    - name: Build package
-      run: |
-        nix build .#ocf-resource-agents --print-build-logs --accept-flake-config
-        nix build .#pacemaker --print-build-logs --accept-flake-config
-        nix build .#pcs-web-ui --print-build-logs --accept-flake-config
-        nix build .#pcs --print-build-logs --accept-flake-config
+            - uses: DeterminateSystems/flakehub-cache-action@main
+            - uses: cachix/cachix-action@v16
+              with:
+                  name: pcsd
+                  authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+
+            - name: Build package
+              run: |
+                  nix build .#ocf-resource-agents --print-build-logs
+                  nix build .#pacemaker --print-build-logs
+                  nix build .#pcs-web-ui --print-build-logs
+                  nix build .#pcs --print-build-logs
