--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -1,41 +1,43 @@
-name: "update"
+name: 'update'
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: '0 7 * * *'
+    workflow_dispatch:
+    schedule:
+        - cron: '0 7 * * *'
 jobs:
-  update:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/create-github-app-token@v1
-      id: generate-token
-      with:
-        app-id: ${{ secrets.APP_ID }}
-        private-key: ${{ secrets.APP_PRIVATE_KEY }}
+    update:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/create-github-app-token@v1
+              id: generate-token
+              with:
+                  app-id: ${{ secrets.APP_ID }}
+                  private-key: ${{ secrets.APP_PRIVATE_KEY }}
 
-    - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v30
-      with:
-        github_access_token: ${{ secrets.GITHUB_TOKEN }}
+            - uses: actions/checkout@v4
+            - uses: cachix/install-nix-action@v31
+              with:
+                  github_access_token: ${{ secrets.GITHUB_TOKEN }}
+                  extra_nix_config: |
+                      accept-flake-config = true
 
-    - uses: DeterminateSystems/flakehub-cache-action@main
-    - uses: cachix/cachix-action@v15
-      with:
-        name: pcsd
-        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+            - uses: DeterminateSystems/flakehub-cache-action@main
+            - uses: cachix/cachix-action@v16
+              with:
+                  name: pcsd
+                  authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
-    - name: update
-      run: ./update.sh --commit
+            - name: update
+              run: ./update.sh --commit
 
-    - name: Create Pull Request
-      id: cpr
-      uses: peter-evans/create-pull-request@v7
-      with:
-        token: ${{ steps.generate-token.outputs.token }}
-        committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
-        author: ${{ github.actor }} <${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com>
-        signoff: false
-        branch: updates
-        delete-branch: true
-        title: '[CI] Package updates'
-        draft: false
+            - name: Create Pull Request
+              id: cpr
+              uses: peter-evans/create-pull-request@v7
+              with:
+                  token: ${{ steps.generate-token.outputs.token }}
+                  committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
+                  author: ${{ github.actor }} <${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com>
+                  signoff: false
+                  branch: updates
+                  delete-branch: true
+                  title: '[CI] Package updates'
+                  draft: false
